## Process this file with automake to produce Makefile.in
# Makefile.am for The Machine Emulator ic/:

AUTOMAKE_OPTIONS = 1.4 gnu

SUBDIRS = ieee754 m68k sparc stp22xx

pkglib_LTLIBRARIES = @PACKAGE@_@SUB_DIR@_am9513.la \
	@PACKAGE@_@SUB_DIR@_z8530.la \
	@PACKAGE@_@SUB_DIR@_i825x6.la \
	@PACKAGE@_@SUB_DIR@_isil7170.la \
	@PACKAGE@_@SUB_DIR@_ncr5380.la \
	@PACKAGE@_@SUB_DIR@_ncr53c9x.la \
	@PACKAGE@_@SUB_DIR@_ncr89c105.la \
	@PACKAGE@_@SUB_DIR@_stp2024.la \
	@PACKAGE@_@SUB_DIR@_ad184x.la \
	@PACKAGE@_@SUB_DIR@_mk48txx.la \
	@PACKAGE@_@SUB_DIR@_nec765.la \
	@PACKAGE@_@SUB_DIR@_am7930.la \
	@PACKAGE@_@SUB_DIR@_am7990.la \
	@PACKAGE@_@SUB_DIR@_lsi64854.la \
	@PACKAGE@_@SUB_DIR@_mm58167.la

@PACKAGE@_@SUB_DIR@_am9513_la_SOURCES = am9513.c
@PACKAGE@_@SUB_DIR@_am9513_la_LIBADD = $(TME_LIBS)

@PACKAGE@_@SUB_DIR@_z8530_la_SOURCES = z8530.c z8530reg.h
@PACKAGE@_@SUB_DIR@_z8530_la_LIBADD = $(TME_LIBS)

@PACKAGE@_@SUB_DIR@_mm58167_la_SOURCES = mm58167.c
@PACKAGE@_@SUB_DIR@_mm58167_la_LIBADD = $(TME_LIBS)

@PACKAGE@_@SUB_DIR@_i825x6_la_SOURCES = i825x6.c i825x6reg.h
@PACKAGE@_@SUB_DIR@_i825x6_la_LIBADD = $(TME_LIBS)

@PACKAGE@_@SUB_DIR@_isil7170_la_SOURCES = isil7170.c
@PACKAGE@_@SUB_DIR@_isil7170_la_LIBADD = $(TME_LIBS)

@PACKAGE@_@SUB_DIR@_ncr5380_la_SOURCES = ncr5380.c
@PACKAGE@_@SUB_DIR@_ncr5380_la_LIBADD = $(TME_LIBS)

@PACKAGE@_@SUB_DIR@_ncr53c9x_la_SOURCES = ncr53c9x.c
@PACKAGE@_@SUB_DIR@_ncr53c9x_la_LIBADD = $(TME_LIBS)

@PACKAGE@_@SUB_DIR@_ncr89c105_la_SOURCES = ncr89c105.c
@PACKAGE@_@SUB_DIR@_ncr89c105_la_LIBADD = $(TME_LIBS)

@PACKAGE@_@SUB_DIR@_stp2024_la_SOURCES = stp2024.c
@PACKAGE@_@SUB_DIR@_stp2024_la_LIBADD = $(TME_LIBS)

@PACKAGE@_@SUB_DIR@_ad184x_la_SOURCES = ad184x.c
@PACKAGE@_@SUB_DIR@_ad184x_la_LIBADD = $(TME_LIBS)

@PACKAGE@_@SUB_DIR@_mk48txx_la_SOURCES = mk48txx.c
@PACKAGE@_@SUB_DIR@_mk48txx_la_LIBADD = $(TME_LIBS)

@PACKAGE@_@SUB_DIR@_nec765_la_SOURCES = nec765.c
@PACKAGE@_@SUB_DIR@_nec765_la_LIBADD = $(TME_LIBS)

@PACKAGE@_@SUB_DIR@_am7930_la_SOURCES = am7930.c
@PACKAGE@_@SUB_DIR@_am7930_la_LIBADD = $(TME_LIBS)

@PACKAGE@_@SUB_DIR@_am7990_la_SOURCES = am7990.c
@PACKAGE@_@SUB_DIR@_am7990_la_LIBADD = $(TME_LIBS)

@PACKAGE@_@SUB_DIR@_lsi64854_la_SOURCES = lsi64854.c
@PACKAGE@_@SUB_DIR@_lsi64854_la_LIBADD = $(TME_LIBS)

include $(top_srcdir)/modules.mk
